deploy/030-Deployment.yaml
kind: Deployment
apiVersion: apps/v1

metadata:
  name: console
  annotations:
    image.openshift.io/triggers: |
      [
        {
          "from": {
            "kind":"ImageStreamTag",
            "name":"console:latest"
          },
          "fieldPath":"spec.template.spec.containers[?(@.name==\"service\")].image"
        }
      ]
  labels:
    app.kubernetes.io/name: console
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: trusted

spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: console
      app.kubernetes.io/component: frontend
      app.kubernetes.io/part-of: trusted
  template:
    metadata:
      labels:
        app.kubernetes.io/name: console
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: trusted
    spec:
      containers:
        - name: service
          image: console:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: service
          livenessProbe:
            httpGet:
              port: 8080
              path: /
          readinessProbe:
            httpGet:
              port: 8080
              path: /
          volumeMounts:
            - mountPath: /run
              name: run
      volumes:
        - name: run
          emptyDir: {}
